--- a/contact/index.html
+++ b/contact/index.html
@@ -1,119 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Contact | Dima Kubik - Frontend Web Developer</title>
-<link rel="stylesheet" href="../assets/css/main.min.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="robots" content="noindex, nofollow" />
+    <title>Contact | Dima Kubik - Frontend Web Developer</title>
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
+
 <body>
-<div id="top-header">
-<div onclick='return yaCounter43104634.reachGoal("burger"),!0' class="burger">
-<div class="burger__patty"></div>
-<div class="burger__patty"></div>
-<div class="burger__patty"></div>
-</div>
-<nav class="menu">
-<div class="menu__brand">
-<a onclick='return yaCounter43104634.reachGoal("connectme"),!0' href="https://vk.com/idimakorabl">
-<div class="logo">
-<p>connect me</p>
-<img src="../assets/images/vk.svg" alt="vk">
-</div>
-</a>
-</div>
-<ul class="menu__list">
-<li class="menu__item"><a onclick='return yaCounter43104634.reachGoal("work"),!0' href="/" class="menu__link">Work</a></li>
-<li class="menu__item"><a onclick='return yaCounter43104634.reachGoal("about"),!0' href="/about/" class="menu__link">About</a></li>
-<li class="menu__item"><a onclick='return yaCounter43104634.reachGoal("contact"),!0' href="/contact/" class="menu__link">Contact</a></li>
-</ul>
-</nav>
-</div>
-<header class="header" role="banner">
-<div class="toppanel">
-<div class="toppanel__banner container"></div>
-<div class="toppanel__progressbar" id="progressbar"></div>
-</div>
-<div class="header__inner container">
-<a onclick='return yaCounter43104634.reachGoal("handmade"),!0' class="brand" href="/" rel="home" aria-label="Go To Homepage">
-<svg width="320" height="150" xmlns="http://www.w3.org/2000/svg" class="object-brand">
-<title>Brand</title>
-<path id="_H1_Line_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M1,95.05L1,113.96" class="kYjHoAom_0"></path>
-<path id="_H2_Line_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M14.36,95.05L14.36,113.96" class="kYjHoAom_1"></path>
-<path id="_H3_Line_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M14.36,104.47L1.08,104.47" class="kYjHoAom_2"></path>
-<path id="_A1_Path_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M33.62,113.96L42.22,95.05L50.91,113.96" class="kYjHoAom_3"></path>
-<path id="_A2_Path_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M36.02,107.89L48.35,107.89" class="kYjHoAom_4"></path>
-<path id="_N1_Line_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M69.89,113.96L69.89,95.05" class="kYjHoAom_5"></path>
-<path id="_N2_Line_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M84.17,113.29L70.22,95.56" class="kYjHoAom_6"></path>
-<path id="_N3_Line_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M84.17,113.96L84.17,95.05" class="kYjHoAom_7"></path>
-<path id="_D1_Path_" d="M346.13,309.17V290.65h5a9,9,0,1,1,0,17.94l-3.37-.08" transform="translate(-241.25 -195.1)" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" class="kYjHoAom_8"></path>
-<path id="_M_Path_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M190.51,113.96L190.51,95.05L198.83,107.39L206.92,94.92L206.92,113.96" class="kYjHoAom_9"></path>
-<path id="_A3_Path_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M226.21,113.88L234.81,94.97L243.5,113.88" class="kYjHoAom_10"></path>
-<path id="_A4_Path_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M228.6,107.81L240.94,107.81" class="kYjHoAom_11"></path>
-<path id="_D2_Path_" d="M504,309.17V290.65h5a9,9,0,1,1,0,17.94l-3.37-.08" transform="translate(-241.25 -195.1)" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" class="kYjHoAom_12"></path>
-<path id="_E_Path_" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M309.76,95.78L297.12,95.78L297.12,113.18L309.76,113.18" class="kYjHoAom_13"></path>
-<path id="_e_Path_2" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M308.54,104.48L297.78,104.51" class="kYjHoAom_14"></path>
-<path data-duration="20" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M117.69,69.83L190.51,142.65" class="kYjHoAom_15"></path>
-<path data-duration="20" style="fill:none;stroke:#232424;stroke-miterlimit:10;stroke-width:2px" d="M190.51,69.83L117.69,142.65" class="kYjHoAom_16"></path>
-<style>.kYjHoAom_0{stroke-dasharray:19 21;stroke-dashoffset:20;animation:kYjHoAom_draw 87ms linear 0s forwards}.kYjHoAom_1{stroke-dasharray:19 21;stroke-dashoffset:20;animation:kYjHoAom_draw 87ms linear 87ms forwards}.kYjHoAom_2{stroke-dasharray:14 16;stroke-dashoffset:15;animation:kYjHoAom_draw 65ms linear 175ms forwards}.kYjHoAom_3{stroke-dasharray:42 44;stroke-dashoffset:43;animation:kYjHoAom_draw 189ms linear 241ms forwards}.kYjHoAom_4{stroke-dasharray:13 15;stroke-dashoffset:14;animation:kYjHoAom_draw 61ms linear 431ms forwards}.kYjHoAom_5{stroke-dasharray:19 21;stroke-dashoffset:20;animation:kYjHoAom_draw 87ms linear 492ms forwards}.kYjHoAom_6{stroke-dasharray:23 25;stroke-dashoffset:24;animation:kYjHoAom_draw 105ms linear 580ms forwards}.kYjHoAom_7{stroke-dasharray:19 21;stroke-dashoffset:20;animation:kYjHoAom_draw 87ms linear 686ms forwards}.kYjHoAom_8{stroke-dasharray:57 59;stroke-dashoffset:58;animation:kYjHoAom_draw 255ms linear 774ms forwards}.kYjHoAom_9{stroke-dasharray:68 70;stroke-dashoffset:69;animation:kYjHoAom_draw 303ms linear 1029ms forwards}.kYjHoAom_10{stroke-dasharray:42 44;stroke-dashoffset:43;animation:kYjHoAom_draw 189ms linear 1332ms forwards}.kYjHoAom_11{stroke-dasharray:13 15;stroke-dashoffset:14;animation:kYjHoAom_draw 61ms linear 1521ms forwards}.kYjHoAom_12{stroke-dasharray:57 59;stroke-dashoffset:58;animation:kYjHoAom_draw 255ms linear 1583ms forwards}.kYjHoAom_13{stroke-dasharray:43 45;stroke-dashoffset:44;animation:kYjHoAom_draw 193ms linear 1838ms forwards}.kYjHoAom_14{stroke-dasharray:11 13;stroke-dashoffset:12;animation:kYjHoAom_draw 52ms linear 2032ms forwards}.kYjHoAom_15{stroke-dasharray:103 105;stroke-dashoffset:104;animation:kYjHoAom_draw 457ms linear 2085ms forwards}.kYjHoAom_16{stroke-dasharray:103 105;stroke-dashoffset:104;animation:kYjHoAom_draw 457ms linear 2542ms forwards}@keyframes kYjHoAom_draw{100%{stroke-dashoffset:0}}@keyframes kYjHoAom_fade{0%{stroke-opacity:1}94.44444444444444%{stroke-opacity:1}100%{stroke-opacity:0}}</style>
-</svg>
-<img src="../assets/images/brand.svg" alt="brand" class="object-image" style="display:none">
-</a>
-</div>
-</header>
-<main class="main" role="main" id="main" tabindex="-1">
-<div class="container page page--contact">
-<div class="page__header fade-in">
-<h1 class="page__title title">Say Hello</h1>
-<p class="lead"><a href="mailto:lilkorabl@gmail.com">lilkorabl@gmail.com</a></p>
-</div>
-<div class="page__content">
-<form id="contact-form" class="contactform form forming">
-<fieldset>
-<input type="hidden" name="*subject" value="github.io">
-<div class="form__field">
-<label for="inputName" class="form__label">What's your name?<span class="req">*</span></label>
-<input id="inputName" class="form__input input-text form-control" name="name">
-</div>
-<div class="form__field">
-<label for="inputEmail" class="form__label">Your email address?<span class="req">*</span></label>
-<input type="email" id="inputEmail" class="form__input input-text form-control" name="email">
-</div>
-<div class="form__field">
-<label for="inputMessage" class="form__label">Tell me about your project:<span class="req" aria-hidden="true">*</span></label>
-<textarea name="message" id="inputMessage" class="form__input form-control" cols="30" rows="10"></textarea>
-</div>
-<div class="form__actions">
-<button onclick='return yaCounter43104634.reachGoal("sendmessage"),!0' type="submit" class="btn btn--primary" id="contactform-submit" value="Send">Send Message</button>
-</div>
-<div class="alert alert-danger center-block submit-fail display-none">Please check your entries.
-<br><a href="#"></a>
-</div>
-<div class="alert alert-success center-block submit-success display-none">
-Thanks! Your message sent.
-<br><a href="#"></a>
-</div>
-</fieldset>
-</form>
-</div>
-</div>
-</main>
-<footer class="footer" role="contentinfo">
-<div class="footer__inner container">
-<p class="footer__item"><strong>&copy; 2017</strong>
-<br>Dima Kubik</p>
-<p class="footer__item"><strong id="contact-email-title">Contact</strong>
-<br><a href="mailto:lilkorabl@gmail.com" title="Contact Email" accesskey="9" aria-labelledby="contact-email-title">lilkorabl@gmail.com</a></p>
-<p class="footer__item"><strong>Social</strong>
-<br><a target="_blank" href="https://vk.com/idimakorabl" title="Vkontakte">Vkontakte</a> / <a target="_blank" href="https://www.facebook.com/dimamillion" title="Facebook">Facebook</a></p>
-<p class="footer__item footer__item--right"><a target="_blank" href="https://github.com/dimakorabl/dimakorabl.github.io" class="footer__icon" title="View Source Code"><span class="icon icon--feed"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414" id="github" width="100%" height="100%"><path d="M8 0a8 8 0 0 0-8 8 8 8 0 0 0 5.47 7.59c.4.075.547-.172.547-.385 0-.19-.007-.693-.01-1.36-2.226.483-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.725-.496.056-.486.056-.486.803.056 1.225.824 1.225.824.714 1.223 1.873.87 2.33.665.072-.517.278-.87.507-1.07-1.777-.2-3.644-.888-3.644-3.953 0-.873.31-1.587.823-2.147-.09-.202-.36-1.015.07-2.117 0 0 .67-.215 2.2.82a7.67 7.67 0 0 1 2-.27 7.67 7.67 0 0 1 2 .27c1.52-1.035 2.19-.82 2.19-.82.43 1.102.16 1.915.08 2.117a3.1 3.1 0 0 1 .82 2.147c0 3.073-1.87 3.75-3.65 3.947.28.24.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.14.46.55.38A7.972 7.972 0 0 0 16 8a8 8 0 0 0-8-8"></path></svg></span></a></p>
-</div>
-</footer>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" defer></script>
-<script src="../assets/js/main.min.js" defer></script>
-<script src="../assets/js/send.min.js" defer></script>
-<script>!function(e,t,a){(t[a]=t[a]||[]).push(function(){try{t.yaCounter43104634=new Ya.Metrika({id:43104634,clickmap:!0,trackLinks:!0,accurateTrackBounce:!0,webvisor:!0})}catch(e){}});var c=e.getElementsByTagName("script")[0],n=e.createElement("script"),r=function(){c.parentNode.insertBefore(n,c)};n.type="text/javascript",n.async=!0,n.src="https://mc.yandex.ru/metrika/watch.js","[object Opera]"==t.opera?e.addEventListener("DOMContentLoaded",r,!1):r()}(document,window,"yandex_metrika_callbacks")</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/43104634" style="position:absolute;left:-9999px" alt=""></div></noscript>
+    <div id="top-header">
+        <div class="burger">
+            <div class="burger__patty"></div>
+            <div class="burger__patty"></div>
+            <div class="burger__patty"></div>
+        </div>
+        <nav class="menu">
+            <div class="menu__brand">
+                <a href="https://vk.com/dimacubik">
+                    <div class="logo">
+                        <p>connect me</p>
+                        <img src="../assets/img/icons/vk.svg" alt="vk">
+                    </div>
+                </a>
+            </div>
+            <ul class="menu__list">
+                <li class="menu__item"><a href="/" class="menu__link">Work</a></li>
+                <li class="menu__item"><a href="/about/" class="menu__link">About</a></li>
+                <li class="menu__item"><a href="/contact/" class="menu__link">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <header class="header" role="banner">
+        <div class="toppanel">
+            <div class="toppanel__banner container"></div>
+            <div class="toppanel__progressbar" id="progressbar"></div>
+        </div>
+        <div class="header__inner container">
+            <a class="brand" href="/" rel="home">
+                <img src="../assets/img/icons/logo.svg" alt="Logo" class="object-brand">
+            </a>
+        </div>
+    </header>
+    <main class="main" role="main" id="main" tabindex="-1">
+        <div class="container page page--contact">
+            <div class="page__header fade-in">
+                <h1 class="page__title title">Say Hello</h1>
+                <p class="lead"><a href="mailto:lilkorabl@gmail.com">lilkorabl@gmail.com</a></p>
+            </div>
+            <div class="page__content">
+                <form id="contact-form" class="contactform form forming">
+                    <fieldset>
+                        <input type="hidden" name="*subject" value="github.io">
+                        <div class="form__field">
+                            <label for="inputName" class="form__label">What's your name?<span class="req">*</span></label>
+                            <input id="inputName" class="form__input input-text form-control" name="name">
+                        </div>
+                        <div class="form__field">
+                            <label for="inputEmail" class="form__label">Your email address?<span class="req">*</span></label>
+                            <input type="email" id="inputEmail" class="form__input input-text form-control" name="email">
+                        </div>
+                        <div class="form__field">
+                            <label for="inputMessage" class="form__label">Tell me about your project:<span class="req" aria-hidden="true">*</span></label>
+                            <textarea name="message" id="inputMessage" class="form__input form-control" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="form__actions">
+                            <button type="submit" class="btn btn--primary" id="contactform-submit" value="Send">Send Message</button>
+                        </div>
+                        <div class="alert alert-danger center-block submit-fail display-none">Please check your entries.
+                            <br><a href="#"></a>
+                        </div>
+                        <div class="alert alert-success center-block submit-success display-none">
+                            Thanks! Your message sent.
+                            <br><a href="#"></a>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer class="footer" role="contentinfo">
+        <div class="footer__inner container">
+            <p class="footer__item"><strong>&copy; 2020</strong>
+                <br>Dima Kubik</p>
+            <p class="footer__item"><strong id="contact-email-title">Contact</strong>
+                <br><a href="mailto:lilkorabl@gmail.com" title="Contact Email" accesskey="9" aria-labelledby="contact-email-title">lilkorabl@gmail.com</a></p>
+            <p class="footer__item"><strong>Social</strong>
+                <br><a target="_blank" href="https://vk.com/dimacubik" title="Vkontakte">Vkontakte</a> / <a target="_blank" href="https://www.facebook.com/dimamillion" title="Facebook">Facebook</a></p>
+            <p class="footer__item footer__item--right">
+                <a target="_blank" href="https://github.com/dimakubik/dimakubik.github.io" class="footer__icon" title="View Source Code">
+                    <span class="icon icon--feed">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414" id="github" width="100%" height="100%">
+                            <path d="M8 0a8 8 0 0 0-8 8 8 8 0 0 0 5.47 7.59c.4.075.547-.172.547-.385 0-.19-.007-.693-.01-1.36-2.226.483-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.725-.496.056-.486.056-.486.803.056 1.225.824 1.225.824.714 1.223 1.873.87 2.33.665.072-.517.278-.87.507-1.07-1.777-.2-3.644-.888-3.644-3.953 0-.873.31-1.587.823-2.147-.09-.202-.36-1.015.07-2.117 0 0 .67-.215 2.2.82a7.67 7.67 0 0 1 2-.27 7.67 7.67 0 0 1 2 .27c1.52-1.035 2.19-.82 2.19-.82.43 1.102.16 1.915.08 2.117a3.1 3.1 0 0 1 .82 2.147c0 3.073-1.87 3.75-3.65 3.947.28.24.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.14.46.55.38A7.972 7.972 0 0 0 16 8a8 8 0 0 0-8-8"></path>
+                        </svg>
+                    </span>
+                </a>
+            </p>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" defer></script>
+    <script src="../assets/js/main.min.js" defer></script>
+    <script src="../assets/js/send.min.js" defer></script>
 </body>
+
 </html>
