--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
                         <span class="masterTable">
                             <ul>
                                 <li>
+                                    <img productid="Aetsoft" src="assets/img/banners/aetsoft.jpg">
+                                    <a class="cd-trigger" href="#!">
+                                        <span>Read more</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <img productid="SkinDoc" src="assets/img/banners/skindoc.jpg">
+                                    <a class="cd-trigger" href="#!">
+                                        <span>Read more</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <img productid="Lookai" src="assets/img/banners/lookai.jpg">
+                                    <a class="cd-trigger" href="#!">
+                                        <span>Read more</span>
+                                    </a>
+                                </li>
+                                <li>
                                     <img productid="OLAgency" src="assets/img/banners/olagency.jpg">
                                     <a class="cd-trigger" href="#!">
                                         <span>Read more</span>
@@ -72,7 +90,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <img productid="OLWay" src="assets/img/banners/olway.jpg">
+                                    <img productid="OpenLedger" src="assets/img/banners/openledger.jpg">
                                     <a class="cd-trigger" href="#!">
                                         <span>Read more</span>
                                     </a>
@@ -90,13 +108,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <img productid="Chaire Village" src="assets/img/banners/chaire.jpg">
-                                    <a class="cd-trigger" href="#!">
-                                        <span>Read more</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <img productid="Snosim" src="assets/img/banners/snosim.jpg">
+                                    <img productid="Aetsoft Insights" src="assets/img/banners/aetsoft_insights.jpg">
                                     <a class="cd-trigger" href="#!">
                                         <span>Read more</span>
                                     </a>
@@ -114,7 +126,13 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <img productid="Aqua Rosa" src="assets/img/banners/aqua-rosa.jpg">
+                                    <img productid="Chaire Village" src="assets/img/banners/chaire.jpg">
+                                    <a class="cd-trigger" href="#!">
+                                        <span>Read more</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <img productid="Shark" src="assets/img/banners/akula.jpg">
                                     <a class="cd-trigger" href="#!">
                                         <span>Read more</span>
                                     </a>
@@ -126,7 +144,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <img productid="Shark" src="assets/img/banners/akula.jpg">
+                                    <img productid="OLWay" src="assets/img/banners/olway.jpg">
                                     <a class="cd-trigger" href="#!">
                                         <span>Read more</span>
                                     </a>
@@ -137,17 +155,20 @@
                             <div class="cd-slider-wrapper">
                                 <span class="ServantTable">
                                     <ul>
+                                        <li><img class="image" productid="Aetsoft" productdesc="We are a software development company helping businesses maximize their potential with business process automation and blockchain solutions." datalink='<a target="_blank" href="https://aetsoft.net/">See more</a>' src="assets/img/banners/aetsoft.jpg"></li>
+                                        <li><img class="image" productid="SkinDoc" productdesc="The AI-powered app engine compares skin spots with disease indications from its wide database enabling the app to detect skin cancer or other disease at an early stage which is crucial for timely treatment." datalink='<a target="_blank" href="https://skindocapp.com/">See more</a>' src="assets/img/banners/skindoc.jpg"></li>
+                                        <li><img class="image" productid="Lookai" productdesc="Look.ai is a plugin for fashion e-stores. You can customize the app the way you like." datalink='<a target="_blank" href="https://looknsell.com/">See more</a>' src="assets/img/banners/lookai.jpg"></li>
                                         <li><img class="image" productid="Vpledger" productdesc="With the launch of our unique Software-as-a-Service (SaaS), we aim to offer a suite of solutions designed to meet the B2B and B2C needs of SMEs" datalink='<a target="_blank" href="https://vpledger.com/">See more</a>' src="assets/img/banners/vpledger.jpg"></li>
                                         <li><img class="image" productid="TBHAWT" productdesc="The high potential of small wind energetics" datalink='<a target="_blank" href="https://tbhawt.ee/">See more</a>' src="assets/img/banners/tbhawt.png"></li>
                                         <li><img class="image" productid='Media studio "Tasma"' productdesc="Come up with and embody ideas in the video" datalink='<a target="_blank" href="https://tasma.pro/">See more</a>' src="assets/img/banners/tasma.jpg"></li>
                                         <li><img class="image" productid="OLAgency" productdesc="OLAgency is a full-service digital marketing agency" datalink='<a target="_blank" href="https://olagency.co/">See more</a>' src="assets/img/banners/olagency.jpg"></li>
                                         <li><img class="image" productid="OLWay" productdesc='OLWay is an ecosystem that connects works, suppliers, carriers and customers in a single network allowing its participants to track & trace an entire path of order, payment and delivery flows' datalink='<a target="_blank" href="https://olway.io/">See more</a>' src="assets/img/banners/olway.jpg"></li>
-                                        <li><img class="image" productid="Snosim" productdesc="Professional demolition and dismantling of buildings, recycling, renovation" datalink='<a target="_blank" href="http://сносим.рф/">See more</a>' src="assets/img/banners/snosim.jpg"></li>
                                         <li><img class="image" productid="Alarm Metal" productdesc="Manning rolled metal products any objects by lowest prices" datalink='<a target="_blank" href="http://аларм-металл.рф/">See more</a>' src="assets/img/banners/metal.jpg"></li>
                                         <li><img class="image" productid="Konstante Handelslogistik" productdesc="Constant trade logistics groceries in Germany" datalink='<a target="_blank" href="http://www.konstante-handelslogistik.de/">See more</a>' src="assets/img/banners/konstante.jpg"></li>
                                         <li><img class="image" productid="Chaire Village" productdesc="Chaire Village - 7 individual snow-white villas in the oasis of the historic park - Chair" datalink='<a target="_blank" href="http://chaire-village.ru">See more</a>' src="assets/img/banners/chaire.jpg"></li>
                                         <li><img class="image" productid="Molkrasnodar" productdesc="Official Internet portal Administration for Youth Administration municipal formation of Krasnodar" datalink='<a target="_blank" href="http://molodej.info/">See more</a>' src="assets/img/banners/molodej.jpg"></li>
-                                        <li><img class="image" productid="Aqua Rosa" productdesc="Unique mineral complexes of AquaRus on the basis of brine for the prevention of inflammation, protection of mucous membranes and skin from external and internal stimuli." datalink='<a target="_blank" href="http://aqua-rosa.ru/">See more</a>' src="assets/img/banners/aqua-rosa.jpg"></li>
+                                        <li><img class="image" productid="OpenLedger" productdesc="OpenLedger delivers the blockchain services and custom blockchain development that power real business transformations. Create new business tools based on revolutionary decentralized networks that change your industry forever. " datalink='<a target="_blank" href="https://openledger.info/">See more</a>' src="assets/img/banners/openledger.jpg"></li>
+                                        <li><img class="image" productid="Aetsoft Insights" productdesc="Read the latest company’s news and technology insights — all in one place." datalink='<a target="_blank" href="https://aetsoft.net/insights/">See more</a>' src="assets/img/banners/aetsoft_insights.jpg"></li>
                                         <li><img class="image" productid="Shark" productdesc="Thermocouple with climate control." datalink='<a target="_blank" href="http://akuladen.by/">See more</a>' src="assets/img/banners/akula.jpg"></li>
                                     </ul>
                                 </span>
